Pagos conectado con stripe y variables ocultas

--- a/Backend/catalogo/src/main/resources/application.yml
+++ b/Backend/catalogo/src/main/resources/application.yml
@@ -4,4 +4,4 @@ server:
 spring:
   data:
     mongodb:
-      uri: "mongodb://mongo:haLRwuliaFwbLKiuzQVTnbWSILCxvZLV@nozomi.proxy.rlwy.net:22466/catalogdb?authSource=admin"
+      uri: ${MONGO_URI_CATALOGO}
