--- a/Backend/recomendaciones/src/main/resources/application.yml
+++ b/Backend/recomendaciones/src/main/resources/application.yml
@@ -4,4 +4,4 @@ server:
 spring:
   data:
     mongodb:
-      uri: "mongodb://mongo:lcyLMyGistfuKsZIYyhGVjlJlIegWIGS@nozomi.proxy.rlwy.net:54666/recomendacionesdb?authSource=admin"
+      uri: ${MONGO_URI_RECOMENDACIONES}
