--- a/Backend/catalogo/src/main/resources/application.yml
+++ b/Backend/catalogo/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
-  port: 8083
+  port: 8080
 
 spring:
   data:
     mongodb:
-      uri: ${MONGO_URI_CATALOGO}
+      uri: "mongodb://mongo:haLRwuliaFwbLKiuzQVTnbWSILCxvZLV@nozomi.proxy.rlwy.net:22466/catalogdb?authSource=admin"
