--- a/Backend/api-gateway/src/main/resources/application.yaml
+++ b/Backend/api-gateway/src/main/resources/application.yaml
@@ -21,12 +21,12 @@ services:
   usuarios: ${USUARIOS_SERVICE_URL:http://usuarios-service:8080}
   catalogo: ${CATALOGO_SERVICE_URL:http://catalogo-service:8080}
   ordenes: ${ORDENES_SERVICE_URL:http://localhost:8081}
-  pagos: ${PAGOS_SERVICE_URL:http://localhost:8082}
+  pagos: ${PAGOS_SERVICE_URL:http://pagos-service:8080}
   proveedores: ${PROVEEDORES_SERVICE_URL:http://localhost:8084}
-  notificaciones: ${NOTIFICACIONES_SERVICE_URL:http://localhost:8087}
+  notificaciones: ${NOTIFICACIONES_SERVICE_URL:http://notificaciones-service:8080}
   reportes: ${REPORTES_SERVICE_URL:http://localhost:8088}
   recomendaciones: ${RECOMENDACIONES_SERVICE_URL:http://localhost:8086}
-  logistica: ${LOGISTICA_SERVICE_URL:http://localhost:8089}
+  logistica: ${LOGISTICA_SERVICE_URL:http://envios-service:8000}
 
 firebase:
   apiKey: AIzaSyAyoikLdOvSQyz5K5zPgHfKkLV5mwFm5nI
