--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -22,6 +22,46 @@ services:
       retries: 5
       start_period: 30s
 
+  kafka:
+    image: apache/kafka:latest
+    container_name: kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:9093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_NUM_PARTITIONS: 3
+    volumes:
+      - ./kafka-data:/var/lib/kafka/data
+    networks:
+      - microservices-network
+
+  create-topics:
+    image: apache/kafka:latest
+    depends_on:
+      - kafka
+    entrypoint: ["/bin/sh", "-c"]
+    command: |
+      "
+      echo 'Waiting for Kafka to start...';
+      sleep 5;
+      kafka-topics.sh --bootstrap-server kafka:9092 --create --topic notifications-payment --partitions 3 --replication-factor 1;
+      kafka-topics.sh --bootstrap-server kafka:9092 --create --topic notification-envios --partitions 3 --replication-factor 1;
+      kafka-topics.sh --bootstrap-server kafka:9092 --create --topic topic3 --partitions 3 --replication-factor 1;
+      echo 'Topics created successfully.';
+      "
+    networks:
+      - microservices-network
+
   usuarios-service:
     build:
       context: ./Usuarios
@@ -55,9 +95,49 @@ services:
       dockerfile: Dockerfile
     container_name: catalogo-service
     ports:
-      - "8083:8080"
+      - "8081:8080"
     depends_on:
       - usuarios-service
+    networks:
+      - microservices-network
+
+  pagos-service:
+    build:
+      context: ./pagos
+      dockerfile: Dockerfile
+    container_name: pagos-service
+    ports:
+      - "8083:8080"
+    depends_on:
+      - kafka
+    networks:
+      - microservices-network
+
+  notificaciones-service:
+    build:
+      context: ./notificaciones
+      dockerfile: Dockerfile
+    container_name: notificaciones-service
+    ports:
+      - "8087:8000"
+    environment:
+      KAFKA_BOOTSTRAP: kafka:9092
+    depends_on:
+      - kafka
+    networks:
+      - microservices-network
+
+  envios-service:
+    build:
+      context: ./envios        # ruta de tu proyecto Python
+      dockerfile: Dockerfile
+    container_name: envios-service
+    ports:
+      - "8089:8000"   # FastAPI corriendo en 8000 dentro del contenedor
+    environment:
+      KAFKA_BOOTSTRAP: kafka:9092
+    depends_on:
+      - kafka
     networks:
       - microservices-network
 
