--- a/Provider/ProviderData/appsettings.json
+++ b/Provider/ProviderData/appsettings.json
@@ -10,5 +10,8 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=mysql-provider;database=providerdb;user=root;password=1234"
   }
 }
