--- a/Backend/ordenes/src/main/resources/application.yml
+++ b/Backend/ordenes/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 server:
-  port: 8082
+  port: 8080
 
 spring:
   data:
     mongodb:
       uri: "mongodb://mongo:ibUfMftVvUUsTtDoOkclCIJfmgrvyWnZ@mainline.proxy.rlwy.net:33104/ordenes?authSource=admin"
+
+catalogo:
+  service:
+    url: http://catalogo-servicio:8080
