--- a/PlataformaMulticanalFrontend/PlataformaMulticanalFrontend.csproj
+++ b/PlataformaMulticanalFrontend/PlataformaMulticanalFrontend.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Proveedor\" />
+  </ItemGroup>
+
 </Project>
