--- a/Backend/ordenes/src/main/resources/application.yml
+++ b/Backend/ordenes/src/main/resources/application.yml
@@ -9,3 +9,21 @@ spring:
 catalogo:
   service:
     url: http://catalogo-servicio:8080
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - prometheus
+          - health
+          - info
+
+  endpoint:
+    prometheus:
+      enabled: true
+
+  prometheus:
+    metrics:
+      export:
+        enabled: true
