--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -177,6 +177,27 @@ services:
     networks:
       - microservices-network
 
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - microservices-network
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+    networks:
+      - microservices-network
+
+
 networks:
   microservices-network:
     driver: bridge
