--- a/Backend/proveedores/src/main/resources/application.yml
+++ b/Backend/proveedores/src/main/resources/application.yml
@@ -13,3 +13,21 @@ spring:
 
 server:
   port: 8080
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - prometheus
+          - health
+          - info
+
+  endpoint:
+    prometheus:
+      enabled: true
+
+  prometheus:
+    metrics:
+      export:
+        enabled: true
